# chatbot

./: .gitignore  README.md  data.json  pyproject.toml
apps/chats/: admin.py  apps.py  consumers.py  models.py  permissions.py  services.py  signals.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_alter_chat_updated.py
apps/chats/services/: chatbot.py  repository.py
apps/chats/tests/: test_views.py
chroma_db/: chroma-collections.parquet  chroma-embeddings.parquet
chroma_db/index/: id_to_uuid_2e5858fb-f601-45f9-974f-e0f9155eabe0.pkl  id_to_uuid_34c3e09b-bf5a-49d1-a4f9-9840617db3e3.pkl  id_to_uuid_f824ba17-812d-4721-9c37-cbd3cffb360b.pkl  index_metadata_2e5858fb-f601-45f9-974f-e0f9155eabe0.pkl  index_metadata_34c3e09b-bf5a-49d1-a4f9-9840617db3e3.pkl  index_metadata_f824ba17-812d-4721-9c37-cbd3cffb360b.pkl  uuid_to_id_2e5858fb-f601-45f9-974f-e0f9155eabe0.pkl  uuid_to_id_34c3e09b-bf5a-49d1-a4f9-9840617db3e3.pkl  uuid_to_id_f824ba17-812d-4721-9c37-cbd3cffb360b.pkl
config/: asgi.py  settings.py  urls.py
static/css/: chat.css
static/src/: chat.js
templates/chats/: chat.html  chat_list.html
