[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Mykhailo Yakubets <mikhail.yakubets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.161"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
